--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-resizable": "^3.0.3",
     "react": "^18.2.0",
     "react-charts": "^3.0.0-beta.50",
     "react-dom": "^18.2.0",
