--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@types/react-resizable": "^3.0.3",
     "@vercel/analytics": "^0.1.5",
+    "cubic-spline": "^3.0.3",
+    "numeric": "^1.2.6",
     "react": "^18.2.0",
     "react-charts": "^3.0.0-beta.50",
     "react-dom": "^18.2.0",
-    "react-resizable": "^3.0.4"
+    "react-resizable": "^3.0.4",
+    "react-router-dom": "^6.4.5",
+    "typescript-cubic-spline": "^1.0.1"
   },
   "devDependencies": {
+    "@types/numeric": "^1.2.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
