--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-charts": "^3.0.0-beta.38",
     "react-dom": "^18.2.0",
+    "react-json-tree": "^0.17.0",
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.4.5",
     "typescript-cubic-spline": "^1.0.1"
