--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/object-hash": "^3.0.2",
     "@types/react-resizable": "^3.0.3",
     "@vercel/analytics": "^0.1.5",
     "immer": "^9.0.17",
+    "object-hash": "^3.0.0",
     "react": "^18.2.0",
     "react-charts": "^3.0.0-beta.38",
     "react-dom": "^18.2.0",
